[tool.poetry]
name = "mbd_pay"
version = "0.1.0"
description = ""
authors = ["shaoxyz <shwb95@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pydantic = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
