[tool.poetry]
name = "mbd_pay"
version = "0.1.5"
license = "MIT"
readme = "README.md"
description = "面包多支付SDK - https://mbd.pub/"
authors = ["shaoxyz <shwb95@163.com>"]
homepage = "https://github.com/shaoxyz/mbd_pay"
repository = "https://github.com/shaoxyz/mbd_pay"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
